@@ -82,6 +82,7 @@ baf275a68d3f799a841932e4e9a95a1a604058ae  jdk-8u102.tar.gz
 ae7df8bd0c18eb40237cf54cc28933f4893b9c92  jdk-8u121.tar.gz
 51531a3a0c16e180ed95cb7d2bd680c2ec0aa553  jdk-8u131.tar.gz
 e45edcf184f608d6f4a7b966d65a5d3289462693  jdk-8u144.tar.gz
+264e806b9300a4fb3b6e15ba0e2c664d4ea698c8  jdk-8u152.tar.gz
 cfecb1383faaf027ffbabfcd77a0b6a6521e0969  jdk-8u20.tar.gz
 44ffeeae219782d40ce6822b580e608e72fd4c76  jdk-8u31.tar.gz
 4132cf52d5025bf330d53b96a5c6466fef432377  jdk-8u51.tar.gz
