@@ -4,7 +4,7 @@ csdp-6.x
 cvc4-1.5-3
 e-2.0-1
 isabelle_fonts-20160830
-jdk-8u144
+jdk-8u152
 jedit_build-20170319
 jfreechart-1.0.14-1
 jortho-1.0-2
